tests/end-to-end/code-coverage/_files/parse-error/src/CannotBeParsed.php
<?php declare(strict_types=1);
$a = 1;
$b = ;
